--- a/predicaments/Disinformation.html
+++ b/predicaments/Disinformation.html
@@ -9,24 +9,33 @@
 <p>How gullible are you? Is your gullibility located in some "gullibility center" in your brain? Could a neurosurgeon reach in and perform some delicate operation to lower your gullibility, otherwise leaving you alone? If you believe this, you are pretty gullible, and should perhaps consider such an operation.</p>
 <cite>Douglas Hofstadter</cite>
 </blockquote><p><strong>Disinformation is the deliberate deception of an audience through the spreading of false information</strong>, most often for political or commercial purposes. It is an attempt at removing truthful information in favour of manipulation and polarisation.</p><p><strong>Outgoing connections:</strong></p><ul>
-<li><a data-href="Carbon fundamentalism" href="../Carbon fundamentalism.html">Carbon fundamentalism</a></li>
-<li><a data-href="News" href="../News.html">News</a></li>
-<li><a data-href="Social media" href="../Social media.html">Social media</a></li>
-<li><a data-href="Moloch" href="../Moloch.html">Moloch</a></li>
-<li><a data-href="Greenwashing" href="../Greenwashing.html">Greenwashing</a></li>
-<li><a data-href="Sustainable growth" href="../Sustainable growth.html">Sustainable growth</a></li>
-<li><a data-href="Avoiding uncertainty" href="../Avoiding uncertainty.html">Avoiding uncertainty</a></li>
-<li><a data-href="Dogmatism" href="../Dogmatism.html">Dogmatism</a></li>
-<li><a data-href="Sense-making crisis" href="../Sense-making crisis.html">Sense-making crisis</a></li>
-<li><a data-href="Culture wars" href="../Culture wars.html">Culture wars</a></li>
-<li><a data-href="Lack of compassion" href="../Lack of compassion.html">Lack of compassion</a></li>
-<li><a data-href="Lack of empathy" href="../Lack of empathy.html">Lack of empathy</a></li>
-<li><a data-href="Genocide" href="../Genocide.html">Genocide</a></li>
-<li><a data-href="Inequality" href="../Inequality.html">Inequality</a></li>
-<li><a data-href="War" href="../War.html">War</a></li>
-<li><a data-href="Greed" href="../Greed.html">Greed</a></li>
-<li><a data-href="Evil" href="../Evil.html">Evil</a></li>
-<li><a data-href="Views on human nature" href="../Views on human nature.html">Views on human nature</li></ul>
+	<li><strong><a href="../Advertising.html">Advertising</a></strong> - Aren't ads just seemingly benign disinformation campaigns? Perhaps not benign? Funny how the biggest chunk of the advertisement industry is based around creative ways to lie.</li>
+	<li><strong><a href="../Algorithmic curation.html">Algorithmic curation</a></strong> - Algorithmic curation does not surface truth, it surfaces what is engaging. And anything with boobs.</li>
+	<li><strong><a href="../Artificial Intelligence.html">Artificial Intelligence</a></strong> - Large language models, at the time of writing this, have no clue whether what they say is true or not, yet they will still appear confident.</li>
+	<li><strong><a href="../Biased evidence selection.html">Biased evidence selection</a></strong> - Just because what you selectively say appears to be true doesn't mean you're speaking the truth.</li>
+	<li><strong><a href="../Breakdown of information infrastructure.html">Breakdown of information infrastructure</a></strong> - Where can one go to find information that isn't skewed to serve a purpose?</li>
+	<li><strong><a href="../Democracy failing.html">Democracy failing</a></strong> - Democracy is failing and we're being told it's not.</li>
+	<li><strong><a href="../Greenwashing.html">Greenwashing</a></strong> - Lies, lies, lies.</li>
+	<li><strong><a href="../Information isn't knowledge.html">Information isn't knowledge</a></strong> - Information isn't knowledge at the best of times. Disinformation creates catastrophic cascades of delusion.</li>
+	<li><strong><a href="../Misinformation.html">Misinformation</a></strong> - Disinformed people become and create misinformed people.</li>
+	<li><strong><a href="../Mistreatment of other humans.html">Mistreatment of other humans</a></strong> - Misleading of other humans. Potentially to their and your doom.</li>
+	<li><strong><a href="../Moloch.html">Moloch</a></strong> - You must lie to win. Tell the truth and be excluded.</li>
+	<li><strong><a href="../Naive progress narrative.html">Naive progress narrative</a></strong> - The entire progress narrative is pretty much one enormous disinformation campaign.</li>
+	<li><strong><a href="../News.html">News</a></strong> - Every news source seems to have an agenda, what then becomes of the information being spread?</li>
+	<li><strong><a href="../Oppressive tyrannies for the good of its victims.html">Oppressive tyrannies for the good of its victims</a></strong> - You want the truth? You can't handle the truth!</li>
+	<li><strong><a href="../Polarisation.html">Polarisation</a></strong> - Disinformation tends towards extremes.</li>
+	<li><strong><a href="../Propaganda.html">Propaganda</a></strong> - Lie enough and it might become truth.</li>
+	<li><strong><a href="../Quantification.html">Quantification</a></strong> - Naively scientific people sometimes blurt out that "facts don't lie". Idiots. Stating facts is the easiest and most efficient way to lie.</li>
+	<li><strong><a href="../Sense-making crisis.html">Sense-making crisis</a></strong> - What even is true nowadays?</li>
+	<li><strong><a href="../Signal-to-noise ratio.html">Signal-to-noise ratio</a></strong> - Every fuckin' source of information out there is starting to sound like Kazumoto Endo. Which is kind of cool, I guess, in a way.</li>
+	<li><strong><a href="../Social erosion.html">Social erosion</a></strong> - Disinformation erodes the very basis of social order.</li>
+	<li><strong><a href="../Social media.html">Social media</a></strong> - Just imagine if the developers of MySpace knew what world they were contributing towards. From music sharing to cat pictures to keeping in touch with relatives to promoting genocides. All in a couple of years. Modernity is a hell of a drug.</li>
+	<li><strong><a href="../Story of separation.html">Story of separation</a></strong> - The single most fundamental disinformation campaign.</li>
+	<li><strong><a href="../The spectacle.html">The spectacle</a></strong> - What does it matter? Truth doesn't exist, it's all just a spectacle.</li>
+	<li><strong><a href="../Too much speed and noise.html">Too much speed and noise</a></strong> - There is so much information flowing that it's nigh on impossible to discern any sense in it.</li>
+	<li><strong><a href="../Virtue signalling.html">Virtue signalling</a></strong> - More lies.</li>
+	<li><strong><a href="../Wisdom crisis.html">Wisdom crisis</a></strong> - We have become so misinformed, disinformed, deformed, unformed. Unwise.</li>
+</ul>
 	<br>
 	<br>
 	<br>
